tests/hulk/errors/semantic/wrong_field_access.hulk
let x: Number = 5 in print(x.length());
